# MLOPs

./: .gitignore
wine-model/: pyproject.toml
wine-model/src/wine_model/: data.py  metrics.py  model.py  train.py
wine-model/tests/: test_metrics.py
